--- a/content/_index.html
+++ b/content/_index.html
@@ -10,13 +10,13 @@ title = "Kubeflow"
     class="btn btn-lg btn-primary mr-3 mb-4"
     href="/docs/started/getting-started/"
   >
-    Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+    快速开始 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
   </a>
   <a
     class="btn btn-lg btn-secondary mr-3 mb-4"
     href="/docs/about/contributing/"
   >
-    Contribute <i class="fas fa-pencil-alt ml-2"></i>
+    贡献 <i class="fas fa-pencil-alt ml-2"></i>
   </a>
   <div class="mx-auto mt-5">
     {{< blocks/link-down color="light" >}}
